fixed footer white space

--- a/client/src/assets/css/Home.css
+++ b/client/src/assets/css/Home.css
@@ -1,8 +1,9 @@
 .video-container {
     margin: 0;
+    padding: 0;
     display: flex;
     align-items: center;
-    height: 93vh;
+    min-height: fit-content;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
@@ -16,4 +17,6 @@ video {
     height: 100%;
     width: 100%;
     object-fit: cover;
+    margin: 0;
+    padding: 0;
 }
